# sup-dash

./: .env.example  .gitignore  docker-compose.yml  docker-compose.yml.bak  fix-frontend.sh  fix-port.sh  main.py  optimize-for-colima-m2.sh  optimize-for-m2.sh  pyproject.toml  running_trouble.md  setup-dbt-for-sdrr-view.sh  setup-dbt-models.sh  setup-docker.sh  simple-frontend.sh
backend/: Dockerfile  ollama-setup.sh  requirements.txt  start.sh
backend/app/: config.py
backend/app/services/: llm_service.py
clickhouse/: Dockerfile  config.xml  init-db.sql
clickhouse/config/: config.xml  users.xml
clickhouse/init/: init-db.sql
cubejs/: Dockerfile  cube.js
cubejs/schema/: Tasks.js
dbt/: Dockerfile  dbt_project.yml  entrypoint.sh
dbt/macros/: export_csv.sql
dbt/models/: exports_content_daily.sql  exports_tasks_daily.sql  schema.yml  task_analytics.sql  task_content.sql  test_model.sql
dbt/profiles/: profiles.yml  profiles.yml.example
docs/: docker-compose.md  installation-guide.md  installer-script.sh  testing-guide.md
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.js
metabase/metabase-data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
oracle-sync/: Dockerfile  main.py  pyproject.toml  requirements.txt  sync.py  syncpl.py  test_click.py  test_conn.py  wait-for-it.sh
scheduler/: Dockerfile  crontab  export_job.py
