[project]
name = "your-project-name"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "oracledb==3.1.1",
    "clickhouse-driver==0.2.6",
    "pandas==2.0.3",
    "python-dotenv==1.0.0",
]
description = "A project to sync data between Oracle and ClickHouse"
readme = "README.md"
readme-content-type = "text/markdown"
